src/test/ui/consts/extra-const-ub/detect-extra-ub.no_flag.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
   = note: accessing memory with alignment 1, but alignment 4 is required
   |
note: inside `std::ptr::read::<u32>`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `ptr::const_ptr::<impl *const u32>::read`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
note: inside `INNER`
  --> $DIR/detect-extra-ub.rs:37:9
   |
LL |         ptr.read();
   |         ^^^^^^^^^^

note: erroneous constant used
  --> $DIR/detect-extra-ub.rs:31:5
   |
LL |     INNER;
   |     ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
